# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

config("harfbuzz_config") {
  include_dirs = [
    "src",
    "include",
    "graphite-src",
  ]
}

config("harfbuzz_flags") {
  cflags = []
  if (is_clang) {
    cflags += [
      "-Wno-missing-field-initializers",
      "-Wno-unused-variable",
      "-Wno-sign-compare",
    ]
  }

  defines = [
    "HAVE_OT",
    "HAVE_ICU",
    "HAVE_ICU_BUILTIN",
    "HB_NO_VISIBILITY",
    "HAVE_GRAPHITE2",
  ]

  if (is_linux || is_android || is_fuchsia) {
    defines += [ "HAVE_PTHREAD" ]
  }
}

source_set("harfbuzz_sources") {
  sources = [
    "graphite-src/CmapCache.cpp",
    "graphite-src/Code.cpp",
    "graphite-src/Collider.cpp",
    "graphite-src/Decompressor.cpp",
    "graphite-src/Face.cpp",
    "graphite-src/FeatureMap.cpp",
    "graphite-src/FileFace.cpp",
    "graphite-src/Font.cpp",
    "graphite-src/GlyphCache.cpp",
    "graphite-src/GlyphFace.cpp",
    "graphite-src/Intervals.cpp",
    "graphite-src/Justifier.cpp",
    "graphite-src/NameTable.cpp",
    "graphite-src/Pass.cpp",
    "graphite-src/Position.cpp",
    "graphite-src/Segment.cpp",
    "graphite-src/Silf.cpp",
    "graphite-src/Slot.cpp",
    "graphite-src/Sparse.cpp",
    "graphite-src/TtfUtil.cpp",
    "graphite-src/UtfCodec.cpp",
    "graphite-src/call_machine.cpp",
    "graphite-src/gr_char_info.cpp",
    "graphite-src/gr_face.cpp",
    "graphite-src/gr_features.cpp",
    "graphite-src/gr_font.cpp",
    "graphite-src/gr_logging.cpp",
    "graphite-src/gr_segment.cpp",
    "graphite-src/gr_slot.cpp",
    "graphite-src/inc/CharInfo.h",
    "graphite-src/inc/CmapCache.h",
    "graphite-src/inc/Code.h",
    "graphite-src/inc/Collider.h",
    "graphite-src/inc/Compression.h",
    "graphite-src/inc/Decompressor.h",
    "graphite-src/inc/Endian.h",
    "graphite-src/inc/Error.h",
    "graphite-src/inc/Face.h",
    "graphite-src/inc/FeatureMap.h",
    "graphite-src/inc/FeatureVal.h",
    "graphite-src/inc/FileFace.h",
    "graphite-src/inc/Font.h",
    "graphite-src/inc/GlyphCache.h",
    "graphite-src/inc/GlyphFace.h",
    "graphite-src/inc/Intervals.h",
    "graphite-src/inc/List.h",
    "graphite-src/inc/Machine.h",
    "graphite-src/inc/Main.h",
    "graphite-src/inc/NameTable.h",
    "graphite-src/inc/Pass.h",
    "graphite-src/inc/Position.h",
    "graphite-src/inc/Rule.h",
    "graphite-src/inc/Segment.h",
    "graphite-src/inc/Silf.h",
    "graphite-src/inc/Slot.h",
    "graphite-src/inc/Sparse.h",
    "graphite-src/inc/TtfTypes.h",
    "graphite-src/inc/TtfUtil.h",
    "graphite-src/inc/UtfCodec.h",
    "graphite-src/inc/bits.h",
    "graphite-src/inc/debug.h",
    "graphite-src/inc/json.h",
    "graphite-src/inc/locale2lcid.h",
    "graphite-src/inc/opcode_table.h",
    "graphite-src/inc/opcodes.h",
    "graphite-src/json.cpp",
    "include/graphite2/Font.h",
    "include/graphite2/Log.h",
    "include/graphite2/Segment.h",
    "include/graphite2/Types.h",
    "src/hb-aat-layout-ankr-table.hh",
    "src/hb-aat-layout-bsln-table.hh",
    "src/hb-aat-layout-common.hh",
    "src/hb-aat-layout-feat-table.hh",
    "src/hb-aat-layout-just-table.hh",
    "src/hb-aat-layout-kerx-table.hh",
    "src/hb-aat-layout-morx-table.hh",
    "src/hb-aat-layout-opbd-table.hh",
    "src/hb-aat-layout-trak-table.hh",
    "src/hb-aat-layout.cc",
    "src/hb-aat-layout.h",
    "src/hb-aat-layout.hh",
    "src/hb-aat-ltag-table.hh",
    "src/hb-aat-map.cc",
    "src/hb-aat-map.hh",
    "src/hb-aat.h",
    "src/hb-algs.hh",
    "src/hb-array.hh",
    "src/hb-atomic.hh",
    "src/hb-bimap.hh",
    "src/hb-bit-page.hh",
    "src/hb-bit-set-invertible.hh",
    "src/hb-bit-set.hh",
    "src/hb-blob.cc",
    "src/hb-blob.h",
    "src/hb-blob.hh",
    "src/hb-buffer-deserialize-json.hh",
    "src/hb-buffer-deserialize-text-glyphs.hh",
    "src/hb-buffer-deserialize-text-unicode.hh",
    "src/hb-buffer-serialize.cc",
    "src/hb-buffer-verify.cc",
    "src/hb-buffer.cc",
    "src/hb-buffer.h",
    "src/hb-buffer.hh",
    "src/hb-cache.hh",
    "src/hb-cff-interp-common.hh",
    "src/hb-cff-interp-cs-common.hh",
    "src/hb-cff-interp-dict-common.hh",
    "src/hb-cff1-interp-cs.hh",
    "src/hb-cff2-interp-cs.hh",
    "src/hb-common.cc",
    "src/hb-common.h",
    "src/hb-config.hh",
    "src/hb-cplusplus.hh",
    "src/hb-debug.hh",
    "src/hb-deprecated.h",
    "src/hb-directwrite.cc",
    "src/hb-directwrite.h",
    "src/hb-dispatch.hh",
    "src/hb-draw.cc",
    "src/hb-draw.h",
    "src/hb-draw.hh",
    "src/hb-face-builder.cc",
    "src/hb-face.cc",
    "src/hb-face.h",
    "src/hb-face.hh",
    "src/hb-fallback-shape.cc",
    "src/hb-font.cc",
    "src/hb-font.h",
    "src/hb-font.hh",
    "src/hb-ft.cc",
    "src/hb-ft.h",
    "src/hb-gdi.cc",
    "src/hb-gdi.h",
    "src/hb-graphite2.cc",
    "src/hb-graphite2.h",
    "src/hb-icu.cc",
    "src/hb-icu.h",
    "src/hb-iter.hh",
    "src/hb-kern.hh",
    "src/hb-limits.hh",
    "src/hb-machinery.hh",
    "src/hb-map.cc",
    "src/hb-map.h",
    "src/hb-map.hh",
    "src/hb-meta.hh",
    "src/hb-ms-feature-ranges.hh",
    "src/hb-multimap.hh",
    "src/hb-mutex.hh",
    "src/hb-null.hh",
    "src/hb-number-parser.hh",
    "src/hb-number.cc",
    "src/hb-number.hh",
    "src/hb-object.hh",
    "src/hb-open-file.hh",
    "src/hb-open-type.hh",
    "src/hb-ot-cff-common.hh",
    "src/hb-ot-cff1-std-str.hh",
    "src/hb-ot-cff1-table.cc",
    "src/hb-ot-cff1-table.hh",
    "src/hb-ot-cff2-table.cc",
    "src/hb-ot-cff2-table.hh",
    "src/hb-ot-cmap-table.hh",
    "src/hb-ot-color.cc",
    "src/hb-ot-color.h",
    "src/hb-ot-deprecated.h",
    "src/hb-ot-face-table-list.hh",
    "src/hb-ot-face.cc",
    "src/hb-ot-face.hh",
    "src/hb-ot-font.cc",
    "src/hb-ot-font.h",
    "src/hb-ot-gasp-table.hh",
    "src/hb-ot-glyf-table.hh",
    "src/hb-ot-hdmx-table.hh",
    "src/hb-ot-head-table.hh",
    "src/hb-ot-hhea-table.hh",
    "src/hb-ot-hmtx-table.hh",
    "src/hb-ot-kern-table.hh",
    "src/hb-ot-layout-base-table.hh",
    "src/hb-ot-layout-common.hh",
    "src/hb-ot-layout-gdef-table.hh",
    "src/hb-ot-layout-gpos-table.hh",
    "src/hb-ot-layout-gsub-table.hh",
    "src/hb-ot-layout-gsubgpos.hh",
    "src/hb-ot-layout-jstf-table.hh",
    "src/hb-ot-layout.cc",
    "src/hb-ot-layout.h",
    "src/hb-ot-layout.hh",
    "src/hb-ot-map.cc",
    "src/hb-ot-map.hh",
    "src/hb-ot-math-table.hh",
    "src/hb-ot-math.cc",
    "src/hb-ot-math.h",
    "src/hb-ot-maxp-table.hh",
    "src/hb-ot-meta-table.hh",
    "src/hb-ot-meta.cc",
    "src/hb-ot-meta.h",
    "src/hb-ot-metrics.cc",
    "src/hb-ot-metrics.h",
    "src/hb-ot-metrics.hh",
    "src/hb-ot-name-language-static.hh",
    "src/hb-ot-name-language.hh",
    "src/hb-ot-name-table.hh",
    "src/hb-ot-name.cc",
    "src/hb-ot-name.h",
    "src/hb-ot-os2-table.hh",
    "src/hb-ot-os2-unicode-ranges.hh",
    "src/hb-ot-post-macroman.hh",
    "src/hb-ot-post-table.hh",
    "src/hb-ot-shape-fallback.cc",
    "src/hb-ot-shape-fallback.hh",
    "src/hb-ot-shape-normalize.cc",
    "src/hb-ot-shape-normalize.hh",
    "src/hb-ot-shape.cc",
    "src/hb-ot-shape.h",
    "src/hb-ot-shape.hh",
    "src/hb-ot-shaper-arabic-fallback.hh",
    "src/hb-ot-shaper-arabic-joining-list.hh",
    "src/hb-ot-shaper-arabic-pua.hh",
    "src/hb-ot-shaper-arabic-table.hh",
    "src/hb-ot-shaper-arabic-win1256.hh",
    "src/hb-ot-shaper-arabic.cc",
    "src/hb-ot-shaper-arabic.hh",
    "src/hb-ot-shaper-default.cc",
    "src/hb-ot-shaper-hangul.cc",
    "src/hb-ot-shaper-hebrew.cc",
    "src/hb-ot-shaper-indic-machine.hh",
    "src/hb-ot-shaper-indic-table.cc",
    "src/hb-ot-shaper-indic.cc",
    "src/hb-ot-shaper-indic.hh",
    "src/hb-ot-shaper-khmer-machine.hh",
    "src/hb-ot-shaper-khmer.cc",
    "src/hb-ot-shaper-myanmar-machine.hh",
    "src/hb-ot-shaper-myanmar.cc",
    "src/hb-ot-shaper-syllabic.cc",
    "src/hb-ot-shaper-syllabic.hh",
    "src/hb-ot-shaper-thai.cc",
    "src/hb-ot-shaper-use-machine.hh",
    "src/hb-ot-shaper-use-table.hh",
    "src/hb-ot-shaper-use.cc",
    "src/hb-ot-shaper-vowel-constraints.cc",
    "src/hb-ot-shaper-vowel-constraints.hh",
    "src/hb-ot-shaper.hh",
    "src/hb-ot-stat-table.hh",
    "src/hb-ot-tag-table.hh",
    "src/hb-ot-tag.cc",
    "src/hb-ot-var-avar-table.hh",
    "src/hb-ot-var-common.hh",
    "src/hb-ot-var-cvar-table.hh",
    "src/hb-ot-var-fvar-table.hh",
    "src/hb-ot-var-gvar-table.hh",
    "src/hb-ot-var-hvar-table.hh",
    "src/hb-ot-var-mvar-table.hh",
    "src/hb-ot-var.cc",
    "src/hb-ot-var.h",
    "src/hb-ot-vorg-table.hh",
    "src/hb-ot.h",
    "src/hb-outline.cc",
    "src/hb-outline.hh",
    "src/hb-paint-extents.cc",
    "src/hb-paint-extents.hh",
    "src/hb-paint.cc",
    "src/hb-paint.h",
    "src/hb-paint.hh",
    "src/hb-pool.hh",
    "src/hb-priority-queue.hh",
    "src/hb-sanitize.hh",
    "src/hb-serialize.hh",
    "src/hb-set-digest.hh",
    "src/hb-set.cc",
    "src/hb-set.h",
    "src/hb-set.hh",
    "src/hb-shape-plan.cc",
    "src/hb-shape-plan.h",
    "src/hb-shape-plan.hh",
    "src/hb-shape.cc",
    "src/hb-shape.h",
    "src/hb-shaper-impl.hh",
    "src/hb-shaper-list.hh",
    "src/hb-shaper.cc",
    "src/hb-shaper.hh",
    "src/hb-static.cc",
    "src/hb-string-array.hh",
    "src/hb-style.cc",
    "src/hb-style.h",
    "src/hb-subset-cff-common.cc",
    "src/hb-subset-cff-common.hh",
    "src/hb-subset-cff1.cc",
    "src/hb-subset-cff1.hh",
    "src/hb-subset-cff2.cc",
    "src/hb-subset-cff2.hh",
    "src/hb-subset-input.cc",
    "src/hb-subset-input.hh",
    "src/hb-subset-plan.cc",
    "src/hb-subset-plan.hh",
    "src/hb-subset.cc",
    "src/hb-subset.h",
    "src/hb-subset.hh",
    "src/hb-ucd-table.hh",
    "src/hb-ucd.cc",
    "src/hb-unicode-emoji-table.hh",
    "src/hb-unicode.cc",
    "src/hb-unicode.h",
    "src/hb-unicode.hh",
    "src/hb-uniscribe.cc",
    "src/hb-uniscribe.h",
    "src/hb-utf.hh",
    "src/hb-vector.hh",
    "src/hb-version.h",
    "src/hb.h",
    "src/hb.hh",
    "src/OT/Color/CBDT/CBDT.hh",
    "src/OT/Color/COLR/COLR.hh",
    "src/OT/Color/CPAL/CPAL.hh",
    "src/OT/Color/sbix/sbix.hh",
    "src/OT/Color/svg/svg.hh",
    "src/OT/glyf/composite-iter.hh",
    "src/OT/glyf/CompositeGlyph.hh",
    "src/OT/glyf/coord-setter.hh",
    "src/OT/glyf/glyf-helpers.hh",
    "src/OT/glyf/glyf.hh",
    "src/OT/glyf/Glyph.hh",
    "src/OT/glyf/GlyphHeader.hh",
    "src/OT/glyf/loca.hh",
    "src/OT/glyf/path-builder.hh",
    "src/OT/glyf/SimpleGlyph.hh",
    "src/OT/glyf/SubsetGlyph.hh",
    "src/OT/glyf/VarCompositeGlyph.hh",
    "src/OT/Layout/Common/Coverage.hh",
    "src/OT/Layout/Common/CoverageFormat1.hh",
    "src/OT/Layout/Common/CoverageFormat2.hh",
    "src/OT/Layout/Common/RangeRecord.hh",
    "src/OT/Layout/GDEF/GDEF.hh",
    "src/OT/Layout/GPOS/Anchor.hh",
    "src/OT/Layout/GPOS/AnchorFormat1.hh",
    "src/OT/Layout/GPOS/AnchorFormat2.hh",
    "src/OT/Layout/GPOS/AnchorFormat3.hh",
    "src/OT/Layout/GPOS/AnchorMatrix.hh",
    "src/OT/Layout/GPOS/ChainContextPos.hh",
    "src/OT/Layout/GPOS/Common.hh",
    "src/OT/Layout/GPOS/ContextPos.hh",
    "src/OT/Layout/GPOS/CursivePos.hh",
    "src/OT/Layout/GPOS/CursivePosFormat1.hh",
    "src/OT/Layout/GPOS/ExtensionPos.hh",
    "src/OT/Layout/GPOS/GPOS.hh",
    "src/OT/Layout/GPOS/LigatureArray.hh",
    "src/OT/Layout/GPOS/MarkArray.hh",
    "src/OT/Layout/GPOS/MarkBasePos.hh",
    "src/OT/Layout/GPOS/MarkBasePosFormat1.hh",
    "src/OT/Layout/GPOS/MarkLigPos.hh",
    "src/OT/Layout/GPOS/MarkLigPosFormat1.hh",
    "src/OT/Layout/GPOS/MarkMarkPos.hh",
    "src/OT/Layout/GPOS/MarkMarkPosFormat1.hh",
    "src/OT/Layout/GPOS/MarkRecord.hh",
    "src/OT/Layout/GPOS/PairPos.hh",
    "src/OT/Layout/GPOS/PairPosFormat1.hh",
    "src/OT/Layout/GPOS/PairPosFormat2.hh",
    "src/OT/Layout/GPOS/PairSet.hh",
    "src/OT/Layout/GPOS/PairValueRecord.hh",
    "src/OT/Layout/GPOS/PosLookup.hh",
    "src/OT/Layout/GPOS/PosLookupSubTable.hh",
    "src/OT/Layout/GPOS/SinglePos.hh",
    "src/OT/Layout/GPOS/SinglePosFormat1.hh",
    "src/OT/Layout/GPOS/SinglePosFormat2.hh",
    "src/OT/Layout/GPOS/ValueFormat.hh",
    "src/OT/Layout/GSUB/AlternateSet.hh",
    "src/OT/Layout/GSUB/AlternateSubst.hh",
    "src/OT/Layout/GSUB/AlternateSubstFormat1.hh",
    "src/OT/Layout/GSUB/ChainContextSubst.hh",
    "src/OT/Layout/GSUB/Common.hh",
    "src/OT/Layout/GSUB/ContextSubst.hh",
    "src/OT/Layout/GSUB/ExtensionSubst.hh",
    "src/OT/Layout/GSUB/GSUB.hh",
    "src/OT/Layout/GSUB/Ligature.hh",
    "src/OT/Layout/GSUB/LigatureSet.hh",
    "src/OT/Layout/GSUB/LigatureSubst.hh",
    "src/OT/Layout/GSUB/LigatureSubstFormat1.hh",
    "src/OT/Layout/GSUB/MultipleSubst.hh",
    "src/OT/Layout/GSUB/MultipleSubstFormat1.hh",
    "src/OT/Layout/GSUB/ReverseChainSingleSubst.hh",
    "src/OT/Layout/GSUB/ReverseChainSingleSubstFormat1.hh",
    "src/OT/Layout/GSUB/Sequence.hh",
    "src/OT/Layout/GSUB/SingleSubst.hh",
    "src/OT/Layout/GSUB/SingleSubstFormat1.hh",
    "src/OT/Layout/GSUB/SingleSubstFormat2.hh",
    "src/OT/Layout/GSUB/SubstLookup.hh",
    "src/OT/Layout/GSUB/SubstLookupSubTable.hh",
    "src/OT/Layout/types.hh",
    "src/OT/name/name.hh",
  ]

  configs += [ ":harfbuzz_flags" ]

  public_configs = [ ":harfbuzz_config" ]

  deps = [
    "//third_party/freetype2",
    "//third_party/icu:icuuc",
  ]
}

source_set("harfbuzz_subset") {
  sources = [
    "src/graph/gsubgpos-context.cc",
    "src/graph/gsubgpos-context.hh",
    "src/hb-aat-layout.cc",
    "src/hb-aat-layout.hh",
    "src/hb-aat-map.cc",
    "src/hb-aat-map.hh",
    "src/hb-blob.cc",
    "src/hb-blob.hh",
    "src/hb-buffer-serialize.cc",
    "src/hb-buffer-serialize.hh",
    "src/hb-buffer-verify.cc",
    "src/hb-buffer-verify.hh",
    "src/hb-buffer.cc",
    "src/hb-buffer.hh",
    "src/hb-common.cc",
    "src/hb-common.hh",
    "src/hb-draw.cc",
    "src/hb-draw.hh",
    "src/hb-face-builder.cc",
    "src/hb-face-builder.hh",
    "src/hb-face.cc",
    "src/hb-face.hh",
    "src/hb-fallback-shape.cc",
    "src/hb-fallback-shape.hh",
    "src/hb-font.cc",
    "src/hb-font.hh",
    "src/hb-map.cc",
    "src/hb-map.hh",
    "src/hb-number.cc",
    "src/hb-number.hh",
    "src/hb-ot-cff1-table.cc",
    "src/hb-ot-cff1-table.hh",
    "src/hb-ot-cff2-table.cc",
    "src/hb-ot-cff2-table.hh",
    "src/hb-ot-color.cc",
    "src/hb-ot-color.hh",
    "src/hb-ot-face.cc",
    "src/hb-ot-face.hh",
    "src/hb-ot-font.cc",
    "src/hb-ot-font.hh",
    "src/hb-ot-layout.cc",
    "src/hb-ot-layout.hh",
    "src/hb-ot-map.cc",
    "src/hb-ot-map.hh",
    "src/hb-ot-math.cc",
    "src/hb-ot-math.hh",
    "src/hb-ot-meta.cc",
    "src/hb-ot-meta.hh",
    "src/hb-ot-metrics.cc",
    "src/hb-ot-metrics.hh",
    "src/hb-ot-name.cc",
    "src/hb-ot-name.hh",
    "src/hb-ot-shape-fallback.cc",
    "src/hb-ot-shape-fallback.hh",
    "src/hb-ot-shape-normalize.cc",
    "src/hb-ot-shape-normalize.hh",
    "src/hb-ot-shape.cc",
    "src/hb-ot-shape.hh",
    "src/hb-ot-shaper-arabic.cc",
    "src/hb-ot-shaper-arabic.hh",
    "src/hb-ot-shaper-default.cc",
    "src/hb-ot-shaper-default.hh",
    "src/hb-ot-shaper-hangul.cc",
    "src/hb-ot-shaper-hangul.hh",
    "src/hb-ot-shaper-hebrew.cc",
    "src/hb-ot-shaper-hebrew.hh",
    "src/hb-ot-shaper-indic-table.cc",
    "src/hb-ot-shaper-indic-table.hh",
    "src/hb-ot-shaper-indic.cc",
    "src/hb-ot-shaper-indic.hh",
    "src/hb-ot-shaper-khmer.cc",
    "src/hb-ot-shaper-khmer.hh",
    "src/hb-ot-shaper-myanmar.cc",
    "src/hb-ot-shaper-myanmar.hh",
    "src/hb-ot-shaper-syllabic.cc",
    "src/hb-ot-shaper-syllabic.hh",
    "src/hb-ot-shaper-thai.cc",
    "src/hb-ot-shaper-thai.hh",
    "src/hb-ot-shaper-use.cc",
    "src/hb-ot-shaper-use.hh",
    "src/hb-ot-shaper-vowel-constraints.cc",
    "src/hb-ot-shaper-vowel-constraints.hh",
    "src/hb-ot-tag.cc",
    "src/hb-ot-tag.hh",
    "src/hb-ot-var.cc",
    "src/hb-ot-var.hh",
    "src/hb-outline.cc",
    "src/hb-outline.hh",
    "src/hb-paint-extents.cc",
    "src/hb-paint-extents.hh",
    "src/hb-paint.cc",
    "src/hb-paint.hh",
    "src/hb-set.cc",
    "src/hb-set.hh",
    "src/hb-shape-plan.cc",
    "src/hb-shape-plan.hh",
    "src/hb-shape.cc",
    "src/hb-shape.hh",
    "src/hb-shaper.cc",
    "src/hb-shaper.hh",
    "src/hb-static.cc",
    "src/hb-static.hh",
    "src/hb-style.cc",
    "src/hb-style.hh",
    "src/hb-subset-cff-common.cc",
    "src/hb-subset-cff-common.hh",
    "src/hb-subset-cff1.cc",
    "src/hb-subset-cff1.hh",
    "src/hb-subset-cff2.cc",
    "src/hb-subset-cff2.hh",
    "src/hb-subset-input.cc",
    "src/hb-subset-input.hh",
    "src/hb-subset-instancer-solver.cc",
    "src/hb-subset-instancer-solver.hh",
    "src/hb-subset-plan.cc",
    "src/hb-subset-plan.hh",
    "src/hb-subset-repacker.cc",
    "src/hb-subset-repacker.hh",
    "src/hb-subset.cc",
    "src/hb-subset.hh",
    "src/hb-ucd.cc",
    "src/hb-ucd.hh",
    "src/hb-unicode.cc",
    "src/hb-unicode.hh",
  ]

  configs += [ ":harfbuzz_flags" ]

  public_configs = [ ":harfbuzz_config" ]

  deps = [
    "//third_party/freetype2",
    "//third_party/icu:icuuc",
  ]
}

source_set("harfbuzz") {
  output_name = "harfbuzz"
  public_deps = [ ":harfbuzz_sources" ]
}
